--- a/index.html
+++ b/index.html
@@ -124,15 +124,11 @@
         <div class="section-title">
           <h2>Sobre Nosotros</h2>
         </div>
-        <div class="row content">
+        <div class="row content" id="row-content-center">
           <div class="col-lg-6">
             <ul>
-              <li><i class="ri-check-double-line"></i> texto a rellenar</li>
-              <li><i class="ri-check-double-line"></i> texto a rellenar</li>
-              <li><i class="ri-check-double-line"></i> texto a rellenar</li>
+              <li id="abt-us-li"><i class="ri-check-double-line"></i>Somos un negocio familiar, dedicado a la venta por mayor y por menor de los mejores productos de embalaje, envases descartables, bolsas, rollos, papeles y otros artículos.</li>
             </ul>
-          </div>
-          <div class="col-lg-6 pt-4 pt-lg-0"> 
           </div>
         </div>
 
@@ -197,8 +193,33 @@
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center" data-aos="zoom-in">
-            <img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/client-6.png" class="img-fluid" id="rapifix">
           </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center" data-aos="zoom-in">
+            <img src="assets/img/clients/client-7.png" class="img-fluid">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center" data-aos="zoom-in">
+            <img src="assets/img/clients/client-8.png" class="img-fluid">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center" data-aos="zoom-in">
+            <img src="assets/img/clients/client-9.png" class="img-fluid">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center" data-aos="zoom-in">
+            <img src="assets/img/clients/client-10.png" class="img-fluid">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center" data-aos="zoom-in">
+            <img src="assets/img/clients/client-11.png" class="img-fluid">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center" data-aos="zoom-in">
+            <img src="assets/img/clients/client-12.png" class="img-fluid">
+          </div>
+          
 
         </div>
 
@@ -209,7 +230,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>productos destacados</h2>
+          <h2>Productos</h2>
 
         </div>
         <div class="row">
@@ -317,7 +338,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Productos destacados</h2>
+          <h2>Galería deroductos destacados</h2>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="150">
@@ -605,46 +626,28 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>OnePage</h3>
+            <h3>Distrimar</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              Sarmiento 184 <br>
+              Mar de Ajó, La Costa<br>
+              Buenos Aires, Argentina <br><br>
+              <strong>Phone:</strong> +54 9 2257 58-4097
+              <br>
+              <strong>Email: </strong> papeleradistrimar@gmail.com<br>
             </p>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Links Útiles</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Inicio</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Nosotros</a></li>
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-          </div>
-
+        
         </div>
       </div>
     </div>
@@ -655,7 +658,7 @@
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
       </div>
     </div>
-  </footer><!-- End Footer -->
+  </footer>
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
