--- a/index.html
+++ b/index.html
@@ -25,10 +25,17 @@
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/wspstlye.css">
+
 
 </head>
 
 <body>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <a href="https://api.whatsapp.com/send?phone=549225758-4097&text=Me%20Gustaria%20recibir%20datos%20sobre%20Distrimar" class="float" target="_blank">
+  <i class="fa fa-whatsapp my-float"></i>
+  </a>
 
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
@@ -74,7 +81,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-7 col-lg-9 text-center">
           <h1>Papelera Distrimar</h1>
-          <p>Desde 1976 a su servicio</p>
+          <p class="hero-section-p">Desde 1976 a su servicio</p>
         </div>
       </div>
 
