--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
 
       </div>
     </section><!-- End Counts Section -->
+    <div class="text-center">
+      <h1 id="clients-section-title">Trabajamos con las siguientes marcas</h1>
+    </div>
 
     
 
@@ -226,12 +229,9 @@
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center" data-aos="zoom-in">
             <img src="assets/img/clients/client-12.png" class="img-fluid">
           </div>
-          
-
         </div>
-
       </div>
-    </section><
+    </section>
 
     <section id="services" class="services section-bg">
       <div class="container" data-aos="fade-up">
@@ -350,12 +350,12 @@
 
         <div class="row" data-aos="fade-up" data-aos-delay="150">
           <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
+            <!-- <ul id="portfolio-flters">
+              <li data-filter="*" class="filter-active">Todos</li>
               <li data-filter=".filter-app">App</li>
               <li data-filter=".filter-card">Card</li>
               <li data-filter=".filter-web">Web</li>
-            </ul>
+            </ul> -->
           </div>
         </div>
 
