--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512–16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   <link rel="stylesheet" href="assets/css/wspstlye.css">
 
 
@@ -84,8 +86,9 @@
           <p class="hero-section-p">Desde 1976 a su servicio</p>
         </div>
       </div>
+      
 
-      <div class="row icon-boxes">
+      <!-- <div class="row icon-boxes">
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
             <div class="icon"><i class="ri-stack-line"></i></div>
@@ -119,7 +122,7 @@
         </div>
 
       </div>
-    </div>
+    </div> -->
   </section><!-- End Hero -->
 
   <main id="main">
